# Character-Animation

./: .gitignore  CMakeLists.txt  README.md
include/: CharacterState.h  KinematicRunPlugin2.h  MathUtils.h  PhysicsController.h
include/arkheon/character/: ICharacterController.h
src/: KinematicRunPlugin2.cpp  MathUtils.cpp  mock_host2.cpp
